# Raahi

./: .replit  ai_video_detector.py  anomaly_detector.py  app.py  config.py  fix_admin_login.py  folium_heatmap_generator.py  generate_comprehensive_data.py  heatmap_generator.py  integrated_heatmap.html  models.py  pyproject.toml  replit.md  requirements.txt  run_video_app.py  utils.py  vercel.json  video_app.py  video_detections.db
attached_assets/: Pasted-Excellent-vision-Nandu-You-re-designing-a-powerful-socially-impactful-system-that-leverages-AI-l-1747937502502.txt  Pasted-To-integrate-basic-speech-recognition-on-the-homepage-landing-page-follow-these-steps-1-Set--1747978774629.txt  content-1747960420970.md
detection/: __init__.py  audio.py  mock_data.py  yolo.py
docs/: architecture.md  design_system.md  testing.md
instance/: raahi.db
routes/: admin.py  api.py  auth.py  public.py
static/css/: animations.css  custom.css  styles.css
static/js/: admin.js  clean-voice-emergency.js  detection.js  emergency-voice.js  enhanced-detection.js  enhanced-sos.js  integrated-voice-system.js  live-detection.js  map.js  raahi-voice-system.js  simple-voice-system.js  simple-voice.js  sos.js  voice-emergency.js  voice-system.js  working-microphone.js
templates/: base.html  error.html  index.html  live_detection.html  processing.html  results.html  video_upload.html
templates/admin/: alerts.html  dashboard.html  incident_detail.html  incidents.html  login.html  map.html  register.html  reset_password.html  video_analysis.html  video_hub.html
tests/: test_app.py
(+3 files in other folders)
