[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "werkzeug>=3.1.3",
    "flask-jwt-extended>=4.7.1",
    "flask-mail>=0.10.0",
    "sqlalchemy>=2.0.41",
    "opencv-python>=4.11.0.86",
    "openai>=1.82.0",
    "trafilatura>=2.0.0",
    "sendgrid>=6.12.2",
    "flask-dance>=7.1.0",
    "oauthlib>=3.2.2",
    "pyjwt>=2.10.1",
]
